fixes and enhancements for batch testing